--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Este repositório é um Fork do punchy original destinado a melhorias para um trabalho de SOFT, matéria do curso de TADS na UDESC
+Este repositório é um fork do Punchy original destinado a um trabalho do curso de TADS na UDESC-CCT
 
 
 http://www.opensourcerails.com/projects/607989-Punchy
