adicionado esquematização para chaves de tradução

--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -1,2 +1,9 @@
 pt-BR:
+  activerecord:
+    errors:
+      models:
+        user:
+          attributes:
+            current_password:
+              blank: "não pode ficar em branco"
   hello: "Hello world"
