adicionado comentarios para encontrar alterações

--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -1,3 +1,4 @@
+# NOTE: Inicio
 en:
   errors:
     messages:
@@ -54,3 +55,4 @@ en:
         subject: 'Reset password instructions'
       unlock_instructions:
         subject: 'Unlock Instructions'
+# NOTE: Fim
