--- a/config/locales/devise.pt-BR.yml
+++ b/config/locales/devise.pt-BR.yml
@@ -1,3 +1,4 @@
+# NOTE: Inicio
 pt-BR:
   errors:
     messages:
@@ -53,3 +54,4 @@ pt-BR:
         subject: 'Instruções de troca de senha'
       unlock_instructions:
         subject: 'Instruções de desbloqueio'
+# NOTE: Fim
