--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Este repositório é um fork do Punchy original destinado a um trabalho do curso de TADS na UDESC-CCT
+Este repositório é um fork do Punchy original destinado a um trabalho do curso de TADS/UDESC-CCT
 
 
 http://www.opensourcerails.com/projects/607989-Punchy
