--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Fork do Punchy original destinado a um trabalho do curso de TADS/UDESC-CCT
+Fork do Punchy destinado a um trabalho do curso de TADS/UDESC-CCT
 
 
 http://www.opensourcerails.com/projects/607989-Punchy
